--- a/klima-dashboard-tile.html
+++ b/klima-dashboard-tile.html
@@ -16,10 +16,13 @@ tile of klima-dashboard
         border-style: solid;
         box-sizing: border-box;
       }
-    </style>
-      <div style="width: 100%;
+      #overflowContainer {
+        width: 100%;
         height: 100%;
-        overflow: auto;">
+        overflow: auto;
+      }
+    </style>
+      <div id="overflowContainer">
        <content></content>
      </div>
   </template>
@@ -49,8 +52,26 @@ tile of klima-dashboard
         positions: {
           type: Array,
           value: [1]
+        },
+        minWidth: {
+          type: Number,
+          type: Infinity
+        },
+        isDisplayed: {
+          type: Boolean,
+          value: true,
+          observer: '_displayedChanged'
         }
       },
+
+      _displayedChanged: function(newValue) {
+        if(newValue) {
+          this.hidden = false;
+        } else {
+          this.hidden = true;
+        }
+      },
+
       setBorder: function(top, right, bottom, left, color) {
         this.style.borderTopWidth = top;
         this.style.borderRightWidth = right;
