--- a/klima-dashboard-tile.html
+++ b/klima-dashboard-tile.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-scroll-target-behavior/iron-scroll-target-behavior.html">
+<link rel="import" href="../iron-icons/iron-icons.html">
 
 <!--
 `klima-dashboard-tile`
@@ -17,13 +18,42 @@ tile of klima-dashboard
         box-sizing: border-box;
       }
       #overflowContainer {
+        position: relative;
         width: 100%;
         height: 100%;
         overflow: auto;
+        overflow-y: hidden;
+      }
+      .buttons {
+        display: block;
+        top: 40%;
+        height: 20%;
+        width: 20px;
+        background-color: grey;
+        opacity: 0.2;
+        z-index: 1;
+      }
+      #rightButton {
+        position: absolute;
+        right: 0px;
+      }
+      #leftButton {
+        position: absolute;
+        left: 0px;
+      }
+      .icons {
+        top: 25%;
+        height: 50%;
       }
     </style>
       <div id="overflowContainer">
-       <content></content>
+        <div id="leftButton" class="buttons" hidden="{{!leftButtonVisible}}" on-tap="_nextLeftTile">
+          <iron-icon class="icons" icon="icons:chevron-left"></iron-icon>
+        </div>
+        <div id="rightButton" class="buttons" hidden="{{!rightButtonVisible}}" on-tap="_nextRightTile">
+          <iron-icon class="icons" icon="icons:chevron-right"></iron-icon>
+        </div>
+        <content></content>
      </div>
   </template>
 
@@ -61,6 +91,22 @@ tile of klima-dashboard
           type: Boolean,
           value: true,
           observer: '_displayedChanged'
+        },
+        nextRightTile: {
+          type: Object,
+          observer: '_nextRightTileChanged'
+        },
+        nextLeftTile: {
+          type: Object,
+          observer: '_nextLeftTileChanged'
+        },
+        rightButtonVisible: {
+          type: Boolean,
+          value: false
+        },
+        leftButtonVisible: {
+          type: Boolean,
+          value: false
         }
       },
 
@@ -78,6 +124,42 @@ tile of klima-dashboard
         this.style.borderBottomWidth = bottom;
         this.style.borderLeftWidth = left;
         this.style.borderColor = color;
+      },
+
+      _nextRightTileChanged: function(newValue) {
+        console.log(newValue);
+        if(newValue == null) {
+          this.rightButtonVisible = false;
+        } else {
+          this.rightButtonVisible = true;
+        }
+      },
+
+      _nextLeftTileChanged: function(newValue) {
+        if(newValue == null) {
+          this.leftButtonVisible = false;
+        } else {
+          this.leftButtonVisible = true;
+        }
+      },
+
+      _nextLeftTile: function(e) {
+        e.preventDefault()
+        e.stopPropagation();
+        if(this.nextLeftTile == null) {
+          console.warn("No tile to focus");
+        } else {
+          this.nextLeftTile();
+        }
+      },
+      _nextRightTile: function(e) {
+        e.preventDefault()
+        e.stopPropagation();
+        if(this.nextRightTile == null) {
+          console.warn("No tile to focus");
+        } else {
+          this.nextRightTile();
+        }
       }
     });
   </script>
