--- a/klima-dashboard.html
+++ b/klima-dashboard.html
@@ -57,7 +57,6 @@ dashboard
       attached: function() {
         this._addTilesFromLightDomToDashboard();
         this._sortDashboardMap();
-        //this._printDashboard();
         this._drawDashboard();
         this._setBorders();
       },
@@ -200,33 +199,85 @@ dashboard
       },
 
       _makeRoomForTiles: function() {
+        if(!this.responsive) {return;}
         this.dashboardMap.forEach(function(tiles, k) {
           for(var i=0; i < tiles.length; i++) {
             if(parseFloat(tiles[i].style.width, 10) < tiles[i].minWidth) {
               this._hideTile(tiles[i]);
+            } else {
+              this._removeNextButtonFromNbr(tiles[i]);
             }
           }
         }.bind(this));
       },
 
-      _hideTile: function(tile) {
-        var tileWidth = parseFloat(tile.style.width, 10);
-        var tileLeft = parseFloat(tile.style.left, 10);
+      _removeNextButtonFromNbr(tile) {
         var row = this.dashboardMap.get(tile.row);
         var positionInRow = tile.positions[0];
         var leftNeighbour = row[positionInRow-2];
         var rightNeighbour = row[positionInRow];
+        if(leftNeighbour != null) {
+          leftNeighbour.nextRightTile = null;
+        }
+        if(rightNeighbour != null) {
+          rightNeighbour.nextLeftTile = null;
+        }
+      },
+
+      _hideTile: function(tile) {
+        var tileWidth = parseFloat(tile.style.width, 10);
+        var tileLeft = parseFloat(tile.style.left, 10);
+        var leftNeighbour = this._getLeftNeighbour(tile);
+        var rightNeighbour = this._getRightNeighbour(tile);
         if(leftNeighbour == null || !leftNeighbour.isDisplayed) {
           if(rightNeighbour == null || !rightNeighbour.isDisplayed) {
             return
           } else {
             this._giveRightNeighbourMoreRoom(rightNeighbour, tileLeft, tileWidth);
+            rightNeighbour.nextLeftTile = function() {
+              this._focusTile(tile, rightNeighbour);
+            }.bind(this);
             tile.isDisplayed = false;
           }
         } else {
           this._giveLeftNeighbourMoreRoom(leftNeighbour, tileWidth);
+          leftNeighbour.nextRightTile = function() {
+            this._focusTile(tile, leftNeighbour);
+          }.bind(this);
           tile.isDisplayed = false;
         }
+      },
+
+      _focusTile: function(tile, actualTile) {
+        console.log("Focus from "+ actualTile.id + " to " + tile.id);
+        tile.style.width = actualTile.style.width;
+        tile.style.left = actualTile.style.left;
+        var leftNeighbour = this._getLeftNeighbour(tile);
+        var rightNeighbour = this._getRightNeighbour(tile);
+        if(leftNeighbour != null) {
+          tile.nextLeftTile = function() {
+            this._focusTile(leftNeighbour, tile);
+          }.bind(this);
+        }
+        if(rightNeighbour != null) {
+          tile.nextRightTile = function() {
+            this._focusTile(rightNeighbour, tile);
+          }.bind(this);
+        }
+        actualTile.isDisplayed = false;
+        tile.isDisplayed = true;
+      },
+
+      _getLeftNeighbour: function(tile) {
+        var row = this.dashboardMap.get(tile.row);
+        var positionInRow = tile.positions[0];
+        return row[positionInRow-2];
+      },
+
+      _getRightNeighbour: function(tile) {
+        var row = this.dashboardMap.get(tile.row);
+        var positionInRow = tile.positions[0];
+        return row[positionInRow];
       },
 
       _giveLeftNeighbourMoreRoom: function(tile, newRoom) {
