event for borders

--- a/demo/index.html
+++ b/demo/index.html
@@ -31,13 +31,13 @@
           <div style="height: 100%; width: 100%">
           <klima-dashboard border-width="4" class="dashboards" responsive> <!-- responsive -->
             <!-- A -->
-            <klima-dashboard-tile style="background-color: red;" row="1" overlap="1" positions="[1,1]" width="50">A</klima-dashboard-tile>
+            <!-- <klima-dashboard-tile style="background-color: red;" row="1" overlap="1" positions="[1,1]" width="50">A</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: blue;" row="1" positions="[2]" width="25">B</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: green;" row="1" positions="[3]" width="25">C</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: yellow;" row="2" positions="[2]" width="50">D</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: orange;" row="3" positions="[1]">E</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: aqua;" row="3" positions="[2]">F</klima-dashboard-tile>
-            <klima-dashboard-tile style="background-color: hotpink;" row="3" positions="[3]">G</klima-dashboard-tile>
+            <klima-dashboard-tile style="background-color: hotpink;" row="3" positions="[3]">G</klima-dashboard-tile> -->
 
             <!-- B -->
             <!-- <klima-dashboard-tile style="background-color: red;" row="1" positions="[1]" width="20">A</klima-dashboard-tile>
@@ -65,7 +65,7 @@
             <klima-dashboard-tile style="background-color: aqua;" row="3" overlap="1" positions="[1,1]" width="10">E</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: crimson;" row="3" overlap="1" positions="[2,2]" width="10">F</klima-dashboard-tile> -->
 
-            <!-- C without widths produces graphic bug -->
+            <!-- C without widths -->
             <!-- <klima-dashboard-tile style="background-color: hotpink;" row="1" positions="[1]">A</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: yellow;" row="1" positions="[2]">B</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: blue;" row="1" positions="[3]">C</klima-dashboard-tile>
@@ -176,12 +176,12 @@
             <klima-dashboard-tile style="background-color: crimson;" row="6" overlap="3" positions="[6,6,6,6]" width="8">6</klima-dashboard-tile>
             <klima-dashboard-tile style="background-color: crimson;" row="4" overlap="1" positions="[7,7]">0</klima-dashboard-tile> -->
 
-            <!-- <klima-dashboard-tile id="tileK" style="background-color: blue;" row="1" overlap="2" positions="[1,1,1]">K</klima-dashboard-tile>
+            <klima-dashboard-tile id="tileK" style="background-color: blue;" row="1" overlap="2" positions="[1,1,1]">K</klima-dashboard-tile>
             <klima-dashboard-tile id="tileL" style="background-color: red;" row="1" overlap="1" positions="[2,2]" width="40">L</klima-dashboard-tile>
             <klima-dashboard-tile id="tileM" style="background-color: yellow;" row="3" positions="[2]">M</klima-dashboard-tile>
             <klima-dashboard-tile id="tileN" style="background-color: green;" row="1" positions="[3]">N</klima-dashboard-tile>
             <klima-dashboard-tile id="tileO" style="background-color: hotpink;" row="2" overlap="1" positions="[3,3]" width="40">O</klima-dashboard-tile>
-            <klima-dashboard-tile id="tileP" style="background-color: lime;" row="1" overlap="2" positions="[4,4,4]">P</klima-dashboard-tile> -->
+            <klima-dashboard-tile id="tileP" style="background-color: lime;" row="1" overlap="2" positions="[4,4,4]">P</klima-dashboard-tile>
           </klima-dashboard>
         </div>
         </template>
