--- a/shared-tile-styles.html
+++ b/shared-tile-styles.html
@@ -6,8 +6,8 @@
         margin: 4px;
       }
       .spark {
-        height: 100%;
-        width: 100%;
+        height: 40px;
+        width: 200px;
         margin-left: -5%;
       }
       .positiveR {
