--- a/klima-dashboard-page.html
+++ b/klima-dashboard-page.html
@@ -37,7 +37,8 @@ dashboard page
         font-weight: bold;
       }
     </style>
-    <klima-dashboard border-width="4" responsive> <!-- responsive || id="dashboard"-->
+    <!-- responsive || id="dashboard"-->
+    <!-- <klima-dashboard border-width="4" responsive>
       <div class="header">
         <h2 style="margin: 0px">Klima Dashboard</h2>
         <div id="period">Periode 3</div>
@@ -55,6 +56,44 @@ dashboard page
         <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/surgicalWard.json"></department-tile>
       </klima-dashboard-tile>
       <klima-dashboard-tile id="gynecology" class="tile" row="2" positions="[3]" min-width="405">
+        <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/gynecology.json"></department-tile>
+      </klima-dashboard-tile>
+      <klima-dashboard-tile id="centralFunctional" class="tile" row="3" positions="[1]" min-width="585">
+        <functional-central-tile source-url="http://127.0.0.1:8081/json/dashboard/department/centralAndFunctional.json"></functional-central-tile>
+      </klima-dashboard-tile>
+      <klima-dashboard-tile id="info" class="tile" row="3" positions="[2]" min-width="400">
+        <info-tile source-url="http://127.0.0.1:8081/json/dashboard/info.json"></info-tile>
+      </klima-dashboard-tile>
+    </klima-dashboard> -->
+
+    <!-- With more tiles -->
+    <klima-dashboard border-width="4" responsive>
+      <div class="header">
+        <h2 style="margin: 0px">Klima Dashboard</h2>
+        <div id="period">Periode 3</div>
+      </div>
+      <klima-dashboard-tile id="key-metrics" class="tile" row="1" positions="[1]" min-width="540">
+        <key-metrics-tile source-url="http://127.0.0.1:8081/json/dashboard/keyMetrics.json"></key-metrics-tile>
+      </klima-dashboard-tile>
+      <klima-dashboard-tile id="objectives" class="tile" row="1" positions="[2]" min-width="460">
+        <objectives-tile source-url="http://127.0.0.1:8081/json/dashboard/objectives.json"></objectives-tile>
+      </klima-dashboard-tile>
+      <klima-dashboard-tile id="internal-medicine" class="tile" row="2" positions="[1]" min-width="405">
+        <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/internalMedicine.json"></department-tile>
+      </klima-dashboard-tile>
+      <klima-dashboard-tile id="surfical-ward" class="tile" row="2" positions="[2]" min-width="405">
+        <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/surgicalWard.json"></department-tile>
+      </klima-dashboard-tile>
+      <klima-dashboard-tile id="gynecology" class="tile" row="2" positions="[3]" min-width="405">
+        <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/gynecology.json"></department-tile>
+      </klima-dashboard-tile>
+      <klima-dashboard-tile id="internal-medicine2" class="tile" row="2" positions="[4]" min-width="405">
+        <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/internalMedicine.json"></department-tile>
+      </klima-dashboard-tile>
+      <klima-dashboard-tile id="surfical-ward2" class="tile" row="2" positions="[5]" min-width="405">
+        <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/surgicalWard.json"></department-tile>
+      </klima-dashboard-tile>
+      <klima-dashboard-tile id="gynecology2" class="tile" row="2" positions="[6]" min-width="405">
         <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/gynecology.json"></department-tile>
       </klima-dashboard-tile>
       <klima-dashboard-tile id="centralFunctional" class="tile" row="3" positions="[1]" min-width="585">
