--- a/klima-dashboard-tile.html
+++ b/klima-dashboard-tile.html
@@ -21,7 +21,7 @@ tile of klima-dashboard
         position: relative;
         width: 100%;
         height: 100%;
-        overflow: auto;
+        overflow-x: auto;
         overflow-y: hidden;
       }
       .buttons {
@@ -112,7 +112,7 @@ tile of klima-dashboard
 
       _displayedChanged: function(newValue) {
         this.hidden = !newValue;
-        this.fire('isDisplayedChanged');
+        this.fire('isDisplayedChanged', newValue);
       },
 
       setBorder: function(top, right, bottom, left, color) {
