Fixed bug where left nbr did not get free space

--- a/klima-dashboard-page.html
+++ b/klima-dashboard-page.html
@@ -78,23 +78,23 @@ dashboard page
       <klima-dashboard-tile id="objectives" class="tile" row="1" positions="[2]" min-width="460">
         <objectives-tile source-url="http://127.0.0.1:8081/json/dashboard/objectives.json"></objectives-tile>
       </klima-dashboard-tile>
-      <klima-dashboard-tile id="internal-medicine" class="tile" row="2" positions="[1]" min-width="405">
+      <klima-dashboard-tile id="DEPinternal-medicine" class="tile" row="2" positions="[1]" min-width="405">
         <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/internalMedicine.json"></department-tile>
       </klima-dashboard-tile>
-      <klima-dashboard-tile id="surfical-ward" class="tile" row="2" positions="[2]" min-width="405">
+      <klima-dashboard-tile id="DEPsurgical-ward" class="tile" row="2" positions="[2]" min-width="405">
         <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/surgicalWard.json"></department-tile>
       </klima-dashboard-tile>
-      <klima-dashboard-tile id="gynecology" class="tile" row="2" positions="[3]" min-width="405">
+      <klima-dashboard-tile id="DEPgynecology" class="tile" row="2" positions="[3]" min-width="405">
         <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/gynecology.json"></department-tile>
       </klima-dashboard-tile>
-      <klima-dashboard-tile id="internal-medicine2" class="tile" row="2" positions="[4]" min-width="405">
-        <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/internalMedicine.json"></department-tile>
+      <klima-dashboard-tile id="DEPobjectives" class="tile" row="2" positions="[4]" min-width="405">
+        <objectives-tile source-url="http://127.0.0.1:8081/json/dashboard/objectives.json"></objectives-tile>
       </klima-dashboard-tile>
-      <klima-dashboard-tile id="surfical-ward2" class="tile" row="2" positions="[5]" min-width="405">
-        <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/surgicalWard.json"></department-tile>
+      <klima-dashboard-tile id="DEPfuncCentral" class="tile" row="2" positions="[5]" min-width="405">
+        <functional-central-tile source-url="http://127.0.0.1:8081/json/dashboard/department/centralAndFunctional.json"></functional-central-tile>
       </klima-dashboard-tile>
-      <klima-dashboard-tile id="gynecology2" class="tile" row="2" positions="[6]" min-width="405">
-        <department-tile source-url="http://127.0.0.1:8081/json/dashboard/department/gynecology.json"></department-tile>
+      <klima-dashboard-tile id="DEPinfo" class="tile" row="2" positions="[6]" min-width="405">
+        <info-tile source-url="http://127.0.0.1:8081/json/dashboard/info.json"></info-tile>
       </klima-dashboard-tile>
       <klima-dashboard-tile id="centralFunctional" class="tile" row="3" positions="[1]" min-width="585">
         <functional-central-tile source-url="http://127.0.0.1:8081/json/dashboard/department/centralAndFunctional.json"></functional-central-tile>
