--- a/department-tile.html
+++ b/department-tile.html
@@ -181,7 +181,7 @@ tile with department info's
       },
       attached: function() {
         var parent = Polymer.dom(this).parentNode;
-        this.listen(parent, 'isDisplayedChanged', '_onIronResize');
+        this.listen(parent, 'isDisplayedChanged', '_onParentDisplayed');
       },
       handleResponse: function(e) {
         this._processData(e.detail.response);
@@ -218,7 +218,7 @@ tile with department info's
       _actualValue: function(array) {
         return array[array.length-1][1];
       },
-      _onIronResize: function(isDisplayed) {
+      _onParentDisplayed: function(isDisplayed) {
         if(isDisplayed) {
           var sparks = Polymer.dom(this.root).querySelectorAll('.spark')
           for(var i = 0; i < sparks.length; i++) {
