--- a/functional-central-tile.html
+++ b/functional-central-tile.html
@@ -191,6 +191,10 @@ tile with functional and central departments info's
           value: false
         }
       },
+      attached: function() {
+        var parent = Polymer.dom(this).parentNode;
+        this.listen(parent, 'isDisplayedChanged', '_onParentDisplayed');
+      },
       ready: function() {
         if(this.sourceUrl != null) {
           this.$.ajax.url = this.sourceUrl;
@@ -224,6 +228,14 @@ tile with functional and central departments info's
       },
       _actualValue: function(array) {
         return array[array.length-1][1];
+      },
+      _onParentDisplayed: function(isDisplayed) {
+        if(isDisplayed) {
+          var sparks = Polymer.dom(this.root).querySelectorAll('.spark');
+          for(var i = 0; i < sparks.length; i++) {
+            sparks[i].redraw();
+          }
+        }
       }
     });
   </script>
