--- a/objectives-tile.html
+++ b/objectives-tile.html
@@ -185,6 +185,10 @@ tile with key metrics
           this.handleError()
         }
       },
+      attached: function() {
+        var parent = Polymer.dom(this).parentNode;
+        this.listen(parent, 'isDisplayedChanged', '_onParentDisplayed');
+      },
       handleResponse: function(e) {
         this._processData(e.detail.response);
         this.dataAvailable = true;
@@ -239,6 +243,14 @@ tile with key metrics
           default:
             return '';
           }
+      },
+      _onParentDisplayed: function(isDisplayed) {
+        if(isDisplayed) {
+          var sparks = Polymer.dom(this.root).querySelectorAll('.spark')
+          for(var i = 0; i < sparks.length; i++) {
+            sparks[i].redraw();
+          }
+        }
       }
     });
   </script>
